# blackbox

./: .gitignore  README.md  pyproject.toml
data/: leads.csv
src/lumen_scout/: cli.py  core_store.py  delivery.py  enrichment.py  llm.py  models.py  providers.py  storage.py  utils.py
src/lumen_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
