[project]
name = "lumen-scout"
version = "0.1.0"
description = "CLI for discovering and enriching K-12 school outreach leads"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "rapidfuzz>=3.9.0",
  "openai>=1.35.0",
]

[project.scripts]
lumen-scout = "lumen_scout.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
